--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p id="welcome-text">Seja bem-vindo!</p><br>
       <ul id="social-container">
         <li><a href="https://www.instagram.com/luizera_35" target="_blank" rel="external"><ion-icon name="logo-instagram"></ion-icon></a></li>
-        <li><a href="www.linkedin.com/in/luiz-otaviano" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li><a href="https://www.linkedin.com/in/luiz-otaviano" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a></li>
         <li><a href="https://github.com/LuizOtaviano" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a></li>
       </ul>
       <div id="email-container">
