--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </aside>
     <section id="about-container">
       <h1 id="name">Luiz Otaviano</h1>
-      <p id="title"><span class="highlights">Desenvolvedor Front-end</span></p>
+      <p id="title"><span class="highlights">Desenvolvedor de Software</span></p>
       <p class="description">Estudante de ciência da computação na UNIFAJ.</p>
       <button onclick="window.open('https://github.com/LuizOtaviano')" id="btn-project"><ion-icon name="share-social-outline"></ion-icon> <span>Ver Projetos</span></button>
       <h2 id="skills-section-title">Minhas Skills</h2>
@@ -49,6 +49,7 @@
         <div class="skills-box">
           <p class="skills-title">Back-End</p>
           <i class="devicon-python-plain colored"></i>
+          <i class="devicon-nodejs-plain colored"></i>
         </div>
 
          <div class="skills-box">
